# langchain-academy

./: CLAUDE.md  pyproject.toml
.claude/agents/: interactive-notebook-tutor.md
module-1/: agent_exercise.ipynb  chain.ipynb  chain_ex.ipynb  router.ipynb  router_tutorial.ipynb  simple-graph.ipynb  simple-graph_ex.ipynb
module-2/: chatbot-external-memory.ipynb  chatbot-external-memory_exercise.ipynb  chatbot-summarization_exercise.ipynb  multiple-schemas_exercise.ipynb  state-reducers_exercise.ipynb  state-schema_exercise.ipynb  trim-filter-messages_exercise.ipynb
module-2/state_db/: example.db-shm  example.db-wal
module-3/: breakpoints-exercise.ipynb  dynamic-breakpoints-exercise.ipynb  edit-state-human-feedback-exercise.ipynb  streaming-interruption-exercise.ipynb  streaming-interruption.ipynb  time-travel-exercise-solutions.ipynb  time-travel-exercise.ipynb
module-4/: map-reduce-exercise.ipynb  parallelization-exercise.ipynb  research-assistant-exercise.ipynb  sub-graph-exercise.ipynb
module-5/: memory_systems_exercises.ipynb
