[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-prebuilt>=0.6.4",
    "langgraph-sdk>=0.2.4",
    "langsmith>=0.4.21",
    "notebook>=7.4.5",
    "tavily-python>=0.7.11",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
